# claude-statusline-stickers

./: .gitignore  README.md  pyproject.toml
.llm/: domain.md  index.md  schema.yaml
.llm/archive/: index.md
.llm/specs/: index.md
.llm/specs/font-build/: index.md
.llm/specs/install/: index.md
.llm/specs/statusline/: index.md
.llm/specs/themes/: index.md
claude_statusline_stickers/: build.py  codepoints.py  config.py  fetch.py  fontcanvas.py  geometry.py  imaging.py  install.py  renderers.py  stickers.py  theme.py
claude_statusline_stickers/statusline/: stickers-command.sh
claude_statusline_stickers/themes/amongus/: theme.json
claude_statusline_stickers/themes/memes/: theme.json
claude_statusline_stickers/themes/pokemon/: theme.json
claude_statusline_stickers/themes/southpark/: theme.json
